<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.lensevents.lensevents.CreateGroupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date_label"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <EditText
                        android:id="@+id/create_event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/date"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColorLink="@color/authui_colorPrimary" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/create_event_administrators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/administrators"
                    android:textColorLink="@color/authui_colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/create_event_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/members_hint"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/create_event_location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_event_location_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_event_location_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/province"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_event_location_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_event_location_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/event_add_photo"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/group_add_photo"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/create_event_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/create" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
