<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.lensevents.lensevents.CreateGroupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorLink="@color/authui_colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/create_group_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColorLink="@color/authui_colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/create_group_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/create_group_administrators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/administrators"
                    android:textColorLink="@color/authui_colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/create_group_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/members_hint"
                    android:textColorLink="@color/authui_colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/create_group_radioButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/create_group_radioButton_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/public_group" />

                <RadioButton
                    android:id="@+id/create_group_radioButton_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_group" />
            </RadioGroup>

            <Button
                android:id="@+id/create_group_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/create" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
